# ape

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytests.yml  python-publish.yml
ape/calculators/: committee.py  utils.py
tests/calculators/: test_committee.py
tests/calculators/data/: test_data.xyz
