[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ape"
version = "0.1"
description = """\
    The Atomic-Simulation-Environment Package Extension (APE) is a collection of tools extending the ASE project.
    """
dependencies = ["numpy"]
authors = [
    {name = "Simon Peter Wengert"}
]

[project.optional-dependencies]
tests = ["pytest"]
